--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      .outer-box {
+        background-color:grey;
+        margin:10px;
+        padding:10px;
+        min-height:300px;
+      }
+      .name {
+        color:white;
+        font-family:Tahoma;
+        margin-left:20px;
+      }
+      .picture {
+        margin-left:20px;
+        margin-right:20px;
+        margin-bottom:10px;
+        float:left;
+        border:2px solid black;
+      }
+      .bio {
+        font-family:Tahoma;
+        padding-left:20px;
+        padding-right:20px;
+        padding-bottom:20px;
+      }
+      img {
+        display:block;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="outer-box">
+      <div class="name"><h1>Macy Freyholtz</h1></div>
+      <div class="picture"><img src="http://via.placeholder.com/150x200"></div>
+      <div class="bio"><h2>Author Name</h2>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum porttitor faucibus nunc, eu scelerisque eros condimentum sit amet. Donec nec dignissim mi. Ut sollicitudin eu magna eu pretium. Duis feugiat erat in rutrum commodo. Nam vel pellentesque tortor. Nunc lacinia, odio vel euismod fringilla, ipsum erat convallis quam, non pulvinar mauris mauris eleifend leo. Pellentesque pretium mattis lorem, sed auctor turpis finibus non. Phasellus eu ex non lectus vulputate ornare. Nulla vehicula purus justo, consectetur porta felis placerat eget. Duis lorem ante, luctus sed porttitor eget, vehicula id libero. Phasellus nibh augue, euismod quis nisl ac, congue elementum risus. Duis.</div>
+    </div>
+  </body>
+  
