--- a/index.html
+++ b/index.html
@@ -39,3 +39,44 @@
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum porttitor faucibus nunc, eu scelerisque eros condimentum sit amet. Donec nec dignissim mi. Ut sollicitudin eu magna eu pretium. Duis feugiat erat in rutrum commodo. Nam vel pellentesque tortor. Nunc lacinia, odio vel euismod fringilla, ipsum erat convallis quam, non pulvinar mauris mauris eleifend leo. Pellentesque pretium mattis lorem, sed auctor turpis finibus non. Phasellus eu ex non lectus vulputate ornare. Nulla vehicula purus justo, consectetur porta felis placerat eget. Duis lorem ante, luctus sed porttitor eget, vehicula id libero. Phasellus nibh augue, euismod quis nisl ac, congue elementum risus. Duis.</div>
     </div>
   </body>
+ 
+    <head>
+    <style>
+      .outer-box {
+        background-color:grey;
+        margin:10px;
+        padding:10px;
+        min-height:300px;
+      }
+      .name {
+        color:white;
+        font-family:Tahoma;
+        margin-left:20px;
+      }
+      .picture {
+        margin-left:20px;
+        margin-right:20px;
+        margin-bottom:10px;
+        float:left;
+        border:2px solid black;
+      }
+      .bio {
+        font-family:Tahoma;
+        padding-left:20px;
+        padding-right:20px;
+        padding-bottom:20px;
+      }
+      img {
+        display:block;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="outer-box">
+      <div class="name"><h1>About The Author</h1></div>
+      <div class="picture"><img src="http://via.placeholder.com/150x200"></div>
+      <div class="bio"><h2>Macy Freyholtz</h2>
+      I'm a high school junior and am currently going to Minnesota Valley Lutheran High School. I used to go to GFW for most of my schooling, but I'm more than happy I left.  Art and animating is my biggest passion, but I'm also interested in photography and the more technical side of projects (like building sets for plays, learning how movies are filmed, etc). I'm trying to take mostly art related classes next year as a senior. I happy to have switched schools to a school with both a great Christian education and great art classes.</div>
+    </div>
+  </body>
+</html>
